Added page target attribute

--- a/application/app/views/clinic/homemain.html.erb
+++ b/application/app/views/clinic/homemain.html.erb
@@ -14,7 +14,7 @@
   <div id="user"><%= User.current_user.username %></div>
   <select id="tabs">
     <option value='/clinic/overview' target="_parent">Overview</option>
-    <option value=''>Reports</option>
+    <option value='/clinic/reports' target="_parent">Reports</option>
     <% if User.current_user.admin? %>
       <option value='/clinic/administration' target="_parent">Admin</option>
     <% end %>
