made some changes to the call analysis report

--- a/application/app/views/report/call_time_of_day.html.erb
+++ b/application/app/views/report/call_time_of_day.html.erb
@@ -29,6 +29,9 @@
       </legend>
       <table cellspacing="0" width="100%">
         <tr>
+          <%= "Filter Info: Grouping - #{@grouping.capitalize}, Staff Name - #{@staff.capitalize}, Call Status - #{@call_status}, Call Type - #{@call_type}"  %>
+        </tr>
+        <tr>
           <td width="52%" colspan = 2 class="celltop cellleft cellbottom main-table-cell" style="font-weight: bold; text-align:right;">
               Total Calls
           </td>
@@ -77,7 +80,19 @@
               %age
           </td>
         </tr>
-        <%@report.reverse.map do |data|%>
+        <% total_calls = 0
+           total_morning = 0
+           total_midday = 0
+           total_afternoon = 0
+           total_evening = 0
+        %>
+        <%@report.reverse.map do |data|
+          total_calls += data[:total]
+          total_morning += data[:morning]
+          total_midday += data[:midday]
+          total_afternoon += data[:afternoon]
+          total_evening += data[:evening]
+        %>
           <tr>
             <td class="cellleft cellbottom main-table-cell" style="text-align:left">
               <%= @grouping.humanize + " ( "+ data[:start_date] + " - " + data[:end_date] + " )"%>
@@ -110,7 +125,40 @@
               <%=  data[:evening_pct] rescue 0 %>
             </td>
           </tr>
+
         <% end %>
+          <tr>
+            <td class="cellleft cellbottom main-table-cell" style="text-align:right">
+              Total
+            </td>
+            <td class="cellleft cellbottom main-table-cell">
+              <%=  total_calls %>
+            </td>
+            <td class="cellleft cellbottom main-table-cell">
+              <%=  total_morning %>
+            </td>
+            <td class="cellleft cellbottom main-table-cell">
+              <%= (total_morning.to_f / total_calls.to_f * 100).round(1) %>
+            </td>
+            <td class="cellleft cellbottom main-table-cell">
+              <%=  total_midday %>
+            </td>
+            <td class="cellleft cellbottom main-table-cell">
+              <%=  (total_midday.to_f / total_calls.to_f * 100).round(1) %>
+            </td>
+            <td class="cellleft cellbottom main-table-cell">
+              <%=  total_afternoon %>
+            </td>
+            <td class="cellleft cellbottom main-table-cell">
+              <%=  (total_afternoon.to_f / total_calls.to_f * 100).round(1) %>
+            </td>
+            <td class="cellleft cellbottom main-table-cell">
+              <%= total_evening %>
+            </td>
+            <td class="cellleft cellbottom cellright main-table-cell">
+              <%=  (total_evening.to_f / total_calls.to_f * 100).round(1) %>
+            </td>
+          </tr>
       </table>
 
     </fieldset>
