made modifications to the call analysis reports

--- a/application/app/views/report/call_day_distribution.html.erb
+++ b/application/app/views/report/call_day_distribution.html.erb
@@ -143,6 +143,12 @@
               <%=  data[:tuesday] rescue 0 %>
             </td>
             <td class="cellleft cellbottom main-table-cell">
+              <%=  data[:tuesday_pct] rescue 0 %>
+            </td>
+            <td class="cellleft cellbottom main-table-cell">
+              <%=  data[:wednesday] rescue 0 %>
+            </td>
+            <td class="cellleft cellbottom main-table-cell">
               <%=  data[:wednesday_pct] rescue 0 %>
             </td>
             <td class="cellleft cellbottom main-table-cell">
